# lantern

./: .bandit  .coveragerc  .editorconfig  .env.example  .env.tpl  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .safety-policy.yml  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  add-metadata-toolbox.paw  build.py  docker-compose.yml  gitlab-ci.Dockerfile  load.py  pyproject.toml
.gitlab/issue_templates/: deploy.md  deployment.md  release.md
docs/: access.md  api-reference.md  architecture.md  cli-reference.md  command-reference.md  config.md  data-model.md  deploy.md  deployment.md  dev.md  exporters.md  implementation-csw.md  implementation-downloads-proxy.md  implementation.md  infrastructure.md  libraries.md  models.md  monitoring.md  outputs.md  setup.md  site.md  stores.md  usage.md  workflow-adding-records.md  workflow-permissions-users.md  workflow-updating-records.md
docs/api/: usage.md
docs/supplemental/: colour-audit.md  icon-audit.md  non-interactive-publishing.md  proto-cli-reference.md
provisioning/terraform/: .terraform.lock.hcl  00-terraform.tf  02-providers.tf  04-remote_state.tf  22-cloudfront.tf  40-s3.tf  42-gitlab_projects.tf  50-iam.tf  54-azure_app_registrations.tf  54-iam_roles.tf  56-iam_policies.tf  58-acm_certificates.tf  docker-compose.yml
resources/assets/: default-thumbnail.pxd  logo.pxd
resources/dev/: .env.tpl  .terraform.lock.hcl  docker-compose.yml  main.tf
resources/dev/apache/: Dockerfile  index.html  vhost.conf
resources/dev/gitlab/: docker-compose.yml  main.tf
resources/dev/haproxy/: data_internal_redirect.txt  data_redirect.txt  haproxy.cfg
resources/env/: .env.tpl
resources/envs/: .terraform.lock.hcl  main.tf  terraform.tfvars.tpl
resources/infra/: .terraform.lock.hcl  main.tf
resources/scripts/: non-interactive-publishing-workflow-schema.json  non-interactive-publishing-workflow.py  site-checks.py  site-verify.py
scar_add_metadata_toolbox/: classes.py  commands.py  csw.py
scar_add_metadata_toolbox/hazmat/: csw.py  metadata.py
scar_add_metadata_toolbox/hazmat/owslib/: crs.py  csw.py  dif.py  etree.py  fes.py  fgdc.py  gm03.py  iso.py  iso_che.py  namespaces.py  ows.py  sos.py  tms.py  util.py  wcs.py  wfs.py  wmc.py  wms.py  wps.py
scar_add_metadata_toolbox/hazmat/pycsw/: __init__.py  oaipmh.py  opensearch.py  server.py  sru.py  wsgi.py
scar_add_metadata_toolbox/static/js/: item.js
scar_add_metadata_toolbox/templates/_views/: item-details.j2
src/lantern/: catalogue.py  checks.py  config.py  log.py  shim.py  shims.py  site.py  utils.py  verification.py
src/lantern/catalogues/: bas.py  base.py
src/lantern/exporters/: base.py  base_exporter.py  cloudfront.py  html.py  html_exporter.py  iso_exporter.py  json.py  json_exporter.py  local.py  records.py  records_exporter.py  rsync.py  s3.py  site.py  site_exporter.py  verification.py  waf.py  website.py  xml.py
src/lantern/models/: checks.py  repository.py  site.py  templates.py
src/lantern/outputs/: base.py  checks.py  item_html.py  items_bas_website.py  record_iso.py  records_waf.py  site_api.py  site_health.py  site_index.py  site_pages.py  site_resources.py
src/lantern/repositories/: bas.py  base.py
src/lantern/stores/: algolia.py  base.py  base_store.py  gitlab.py  gitlab_cache.py
src/scar_add_metadata_toolbox/: __init__.py  classes.py  client_auth.py  commands.py  config.py  csw.py  placeholders.py  utils.py
support/: add-metadata-toolbox.paw
support/ci-cd/: Dockerfile
support/docker-packaging/: Dockerfile
support/downloads-proxy/: artefact-lookups-v1.json  index.js
support/terraform/: 20-route53.tf  34-lambda.tf  53-gitlab_users.tf
tasks/: _config.py  _record_utils.py  _shared.py  build.py  cache_init.py  config.py  config_check.py  css.py  css_audit.py  esri_item.py  icons_audit.py  import_records.py  js.py  keys_check.py  load.py  load_records.py  output.py  record_clone.py  record_dump_admin.py  record_esri.py  record_gitlab.py  record_issues.py  record_permissions.py  record_supersede.py  records_boostrap.py  records_bootstrap.py  records_build.py  records_check.py  records_import.py  records_invalidate.py  records_load.py  records_ops_eo.py  records_permissions.py  records_preview.py  records_select.py  records_upgrade_2026_02.py  records_upgrade_2026_04.py  records_verify.py  records_workflow.py  records_workflow_live.py  (+9 more)
tests/: conftest.py
tests/lantern_tests/: test_catalogue.py  test_checks.py  test_config.py  test_log.py  test_logging.py  test_site.py  test_utils.py  test_verification.py
tests/lantern_tests/_workflows/: test_non_interactive.py
tests/lantern_tests/catalogues/: test_bas_catalogue.py  test_base_catalogue.py
tests/lantern_tests/e2e/: test_item_e2e.py  test_site_e2e.py
tests/lantern_tests/exporters/: test_base_exporter.py  test_cloudfront_exporter.py  test_html_exporter.py  test_iso_exporter.py  test_json_exporter.py  test_local_exporter.py  test_records_exporter.py  test_rsync_exporter.py  test_s3_exporter.py  test_site_exporter.py  test_verification_exporter.py  test_waf_exporter.py  test_website_exporter.py  test_xml_exporter.py
tests/lantern_tests/models/: test_checks.py  test_site.py  test_templates.py
tests/lantern_tests/outputs/: test_base_output.py  test_checks.py  test_item_html.py  test_items_bas_website.py  test_record_iso.py  test_records_waf.py  test_site_api.py  test_site_health.py  test_site_index.py  test_site_pages.py  test_site_resources.py
tests/lantern_tests/repositories/: test_bas_repository.py  test_base_repository.py
tests/lantern_tests/stores/: test_algolia_store.py  test_base_store.py  test_gitlab_cache.py  test_gitlab_store.py
tests/lantern_tests/templates/: test_templates.py  (+1 more)
tests/resources/: admin_keys.py
tests/scar_add_metadata_toolbox/: records.py  test_classes.py  test_commands.py
tests/scar_add_metadata_toolbox_tests/: records.py  test_app.py  test_classes.py  test_commands.py  test_min_records.py  test_routes.py  test_utils.py
tests/scripts/: build_fake_cat.py  build_test.py  decode_binary_response.py  encode_binary_response.py
(+613 files in other folders)
